# ai_crash_test_prototype

./: .coverage  .gitignore  COMPLETE_PROJECT_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_OPTIMIZATION.md  ENTERPRISE_SCALING_ARCHITECTURE.md  MULTI_AGENT_IMPLEMENTATION_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  comprehensive_api_test.py  comprehensive_test_30_prompts.py  env.example  integration_test_multi_agent.py  minimal_api_test.py  requirements-test.txt  simple_api_server.py  simple_flow_test.py  start.sh  test_capture_and_evaluate.py  unified_api_server.py  vercel.json  verify_flow.py
archive/backend-scripts/: README.md  comprehensive_test_30_prompts.py  integration_test_multi_agent.py  verify_flow.py
archive/backend-tests/: README.md  test_data_extraction_real_api.py  test_env_security.py  test_real_api_sample.py
archive/legacy/: README.md  simple_api_server.py
backend/: BACKEND_RESTRUCTURE.md  FRONTEND_README.md  README.md  __init__.py  cli.py  demo_evaluation.py  init_db.py  main.py  preview_samples.py  pytest.ini  requirements.txt  run.py  run_tests.sh  streamlit_app.py  test_api_functionality.py  test_data_extraction_config.py  test_db.py  test_env_config.py  test_env_security.py  test_jailbreak_evaluation.py  test_jailbreak_real_api.py  test_jailbreak_structure.py
backend/api/: main.py  unified_api_server.py.backup
backend/config/: settings.py
backend/models/: __init__.py  schemas.py
backend/services/: auth.py  test_executor.py
backend/src/: example_v2.py
backend/tests/: README.md  TEST_RESULTS_ANALYSIS.md  __init__.py  test_input_guardrails.py  test_input_guardrails_complete.py  test_input_guardrails_false_positives.py  test_input_guardrails_gaps.py  test_input_guardrails_manual.py
backend/utils/: llm_client.py
data/: PROMPT_INJECTION_DATASET_SUMMARY.md  add_final_samples.py  comprehensive_20_samples_test_report_1760856820.json  data_extraction_comprehensive.json  data_extraction_limited_20.json  data_transformation.ipynb  data_transformation_enhanced.ipynb  demo_test.py  demo_test_results.json  extract_data.py  generate_data_extraction_samples.py  jailbreak.json  jailbreak_comprehensive.json  merge_data_extraction_dataset.py  process_prompt_injection_data.py  prompt_injection_comprehensive.json  prompt_injection_comprehensive_processed.json  prompt_injection_limited_30.json  real_prompt_injection_test.py  results_openai.jsonl  sample_data.csv  simple_real_test.py  simple_real_test_report_1760856537.json  simple_test_server.py  test_20_samples.py  test_data_extraction_dataset.py  test_prompt_injection.py  validate_data_extraction_dataset.py  verify_api_calls.py
docs/: README.md
docs/api/: API_REFERENCE.md
docs/architecture/: COMPLETE_SYSTEM_ARCHITECTURE.md
docs/onboarding/: QUICK_START_GUIDE.md
docs/runbooks/: DEPLOYMENT_GUIDE.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: animated-gradient-text.tsx  (+1 more)
imp_docs/: EVALUATION_LAYER_DESIGN.md  NEW_USER_GUIDE.md  PROJECT_ANALYSIS_AND_ENHANCEMENT_RECOMMENDATIONS.md  WIDGET_ANALYTICS_PROPOSAL.md  promptinjectionmoduleenhancement.md
platform/libs/common/: pyproject.toml
platform/libs/common/src/: __init__.py  errors.py  events.py  logging.py
platform/libs/common/tests/: __init__.py  conftest.py  test_errors.py  test_events.py  test_logging.py
platform/libs/connectors/: README.md  pyproject.toml
platform/libs/connectors/src/: __init__.py  base.py  openai_connector.py
platform/libs/connectors/tests/: __init__.py  conftest.py  test_base.py  test_openai_connector.py
platform/libs/storage/: pyproject.toml
platform/libs/storage/src/: __init__.py  base.py  credential_storage.py  model_metadata.py
platform/libs/storage/tests/: __init__.py  conftest.py  test_base.py  test_credential_storage.py  test_model_metadata.py
platform/services/prompt-injection-tester/: README.md  pyproject.toml
platform/services/prompt-injection-tester/src/: __init__.py  main.py
platform/services/prompt-injection-tester/src/agents/: captured_response_evaluator.py  evaluation_agent.py  report_analysis_agent.py  response_capture_agent.py  test_execution_agent.py  validation_agent.py
platform/services/prompt-injection-tester/src/workflows/: prompt_injection_workflow.py
platform/services/results-insights/: README.md  pyproject.toml
platform/services/results-insights/src/: __init__.py  main.py
platform/services/results-insights/tests/: __init__.py  conftest.py  test_metrics_calculation.py  test_results_aggregation.py
research/: FIREWALL_INNOVATION_RESEARCH_AND_STRATEGY.md  FIREWALL_MODULE_UI_DESIGN.md  INPUT_GUARDRAILS_RESEARCH_AND_REDESIGN.md
results/: jailbreak_captured_responses_20251023_233043_911ca64f.json  jailbreak_captured_responses_20251023_233952_e000483b.json  jailbreak_comprehensive_results_20251023_233043_911ca64f.json  jailbreak_comprehensive_results_20251023_233952_e000483b.json  jailbreak_evaluated_responses_20251023_233043_911ca64f.json  jailbreak_evaluated_responses_20251023_233952_e000483b.json  real_api_e2e_test_1762057801.json  real_api_e2e_test_1762057945.json  real_api_e2e_test_1762058204.json
test_results/: coverage.xml  unit_tests.html  unit_tests.xml
tests/: __init__.py  conftest.py
(+181 files in other folders)
